--- a/was04-department/was04-department-core/src/main/webapp/layout/header.xhtml
+++ b/was04-department/was04-department-core/src/main/webapp/layout/header.xhtml
@@ -11,7 +11,7 @@
 
         <a href="#{root}/index.xhtml" class="logo">
             <!-- Add the class icon to your logo image or logo icon to add the margining -->
-            WAS04
+            ZychPOL
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
