--- a/was04-department/was04-department-core/src/main/webapp/layout/main-template.xhtml
+++ b/was04-department/was04-department-core/src/main/webapp/layout/main-template.xhtml
@@ -21,6 +21,8 @@
         <link href="#{root}/resources/css/ionicons.min.css" rel="stylesheet" type="text/css" />
         <!-- Theme style -->
         <link href="#{root}/resources/css/AdminLTE.css" rel="stylesheet" type="text/css" />
+        
+        <link href="#{root}/resources/css/was04-custom.css" rel="stylesheet" type="text/css" />
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
