--- a/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
@@ -12,55 +12,55 @@
 	</composite:interface>
 
 	<composite:implementation>
-		<div class="col-xs-12">		
-			<div class="row">
-				<div class="row">		
-					<div class="col-xs-6">
-						<label>Nazwa</label>
-						<p:inputText styleClass="form-control" />
-					</div>	
-					<div class="col-xs-6">
-						<label>Data wystawienia</label>
-						<p:inputText styleClass="form-control" />
-					</div>		
+		<div class="row invoice-info">
+			<div class="col-sm-4 col-lg-3 invoice-col">
+				<div class="small-box bg-blue">
+					<div class="inner">
+						<h3>Sprzedawca</h3>
+						<address>
+							<strong>Admin, Inc.</strong><br /> 
+							795 Folsom Ave, Suite 600<br />
+							San Francisco, CA 94107<br /> 
+							Phone: (804) 123-5432<br /> 
+							Email:info@almasaeedstudio.com
+						</address>
+					</div>
+					<a href="#" class="small-box-footer"> More info <i
+						class="fa fa-arrow-circle-right"></i>
+					</a>
 				</div>
 			</div>
-			<div class="row">
-				<div class="row">	
-					<div class="col-xs-6">
-						<label>Ulica</label>
-						<p:inputText styleClass="form-control" />
-					</div>	
-					<div class="col-xs-6">
-						<label>Numer faktury</label>
-						<p:inputText styleClass="form-control" />
-					</div>		
+			<div class="col-sm-4 col-lg-3 invoice-col">
+				<div class="small-box bg-blue">
+					<div class="inner">
+						<h3>Nabywca</h3>
+						<address>
+							<strong>Empty</strong><br/>
+							Empty<br /> 
+							Empty<br /> 
+							Empty<br /> 
+							Empty
+						</address>
+					</div>
+					<div class="icon">
+						<h:commandLink>
+							<i class="ion ion-person-add" />
+						</h:commandLink>
+					</div>
+					<a href="#" class="small-box-footer"> More info 
+						<i class="fa fa-arrow-circle-right" />
+					</a>
 				</div>
 			</div>
-			<div class="row">
-				<div class="row">		
-					<div class="col-xs-6">
-						<label>Kod, miejscowość</label>
-						<p:inputText styleClass="form-control" />
-					</div>		
-					<div class="col-xs-6">
-						<label>Numer zamówienia</label>
-						<p:inputText styleClass="form-control" />
-					</div>		
-				</div>
+			<div class="col-sm-4 invoice-col">
+				<label>Numer zamówienia</label>
+				<p:inputText styleClass="form-control" />
+	
+				<label>Środek transportu</label>                                                    
+				<h:selectOneMenu styleClass="form-control">  
+	            	<f:selectItems /> 
+	            </h:selectOneMenu> 
 			</div>
-			<div class="row">
-				<div class="row">
-					<div class="col-xs-6">
-						<label>NIP</label>
-						<p:inputText styleClass="form-control" />
-					</div>		
-					<div class="col-xs-6">
-						<label>Środek transportu</label>
-						<p:inputText styleClass="form-control" />
-					</div>	
-				</div>
-			</div>				
 		</div>
 		<p:spacer style="width: 10px" />
 		<cc:internalDocument />
