--- a/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
@@ -11,51 +11,59 @@
 	</composite:interface>
 
 	<composite:implementation>
-		<div class="col-xs-12">
-			<div class="row">
-				<div class="row">
-					<div class="col-xs-12">
-		            	<div class="box-body table-responsive"> 
-							<p:dataTable  tableStyleClass="table table-bordered dataTable">
-								<p:column headerText="Nazwa asortymentu" />
-								<p:column headerText="PKWiU" />
-								<p:column headerText="J.m." />
-								<p:column headerText="Ilość" />
-								<p:column headerText="Cena" />
-								<p:column headerText="Watość" />
-							</p:dataTable>
-						</div>
-					</div>
+		<div class="row" style="width: 107%;">
+			<div class="col-xs-11 table-responsive">
+				<p:dataTable tableStyleClass="table table-bordered table-striped">
+					<p:column headerText="Nazwa asortymentu" />
+					<p:column headerText="PKWiU" />
+					<p:column headerText="J.m." />
+					<p:column headerText="Ilość" />
+					<p:column headerText="Cena" />
+					<p:column headerText="Watość" />
+				</p:dataTable>
+			</div>
+			<div class="col-xs-1">
+				<div class="row" style="margin-bottom: 5px;">
+					<p:commandLink styleClass="btn btn-danger">
+						<i class="fa fa-minus" />
+					</p:commandLink>
 				</div>
-				
 				<div class="row">
-					<div class="col-xs-8">
-						<label>Adnotacje</label>
-						<p:inputTextarea styleClass="form-control" />
-					</div>
-					
-					<div class="col-xs-4 pull-right">
-						<label>Razem</label>
-						<p:inputText styleClass="form-control" />
-					</div>
+					<p:commandLink styleClass="btn btn-success">
+						<i class="fa fa-plus" />
+					</p:commandLink>
 				</div>
-	
-				<div class="row">
-					<div class="col-xs-4">
-						<label>Wystawił</label>
-						<p:inputTextarea styleClass="form-control" />
-					</div>
+			</div>
+		</div>
 		
-					<div class="col-xs-4">
-						<label>Wydał</label>
-						<p:inputTextarea styleClass="form-control" />
-					</div>
+		<p:spacer style="height: 10px" />
 		
-					<div class="col-xs-4">
-						<label>Odebrał</label>
-						<p:inputTextarea styleClass="form-control" />
-					</div>
-				</div>
+		<div class="row">
+			<div class="col-xs-8">
+				<label>Adnotacje</label>
+				<p:inputTextarea styleClass="form-control" />
+			</div>
+
+			<div class="col-sm-4 pull-right">
+				<label>Razem</label>
+				<p:inputText styleClass="form-control" disabled="true"/>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-xs-4">
+				<label>Wystawił</label>
+				<p:inputTextarea styleClass="form-control" />
+			</div>
+
+			<div class="col-xs-4">
+				<label>Wydał</label>
+				<p:inputTextarea styleClass="form-control" />
+			</div>
+
+			<div class="col-xs-4">
+				<label>Odebrał</label>
+				<p:inputTextarea styleClass="form-control" />
 			</div>
 		</div>
 	</composite:implementation>
