--- a/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
@@ -9,6 +9,7 @@
 	xmlns:cc="http://java.sun.com/jsf/composite/components">
 
 	<composite:interface>
+		<composite:attribute name="controller"/>
 	</composite:interface>
 
 	<composite:implementation>
@@ -54,15 +55,16 @@
 			</div>
 			<div class="col-sm-4 invoice-col">
 				<label>Numer zamówienia</label>
-				<p:inputText styleClass="form-control" />
+				<p:inputText styleClass="form-control"
+						value="#{cc.attrs.controller.sourceObject.orderSymbol}"/>
 	
 				<label>Środek transportu</label>                                                    
-				<h:selectOneMenu styleClass="form-control">  
-	            	<f:selectItems /> 
-	            </h:selectOneMenu> 
+				<h:selectOneMenu styleClass="form-control">
+	            	<f:selectItems itemValue="#{transportMean.id}" itemLabel="#{transportMean.name}" var="transportMean" value="#{cc.attrs.controller.transportMeanList}"/>
+	            </h:selectOneMenu>
 			</div>
 		</div>
 		<p:spacer style="width: 10px" />
-		<cc:internalDocument />
+		<cc:internalDocument controller="#{cc.attrs.controller}" />
 	</composite:implementation>
 </ui:composition>
