--- a/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
@@ -14,13 +14,26 @@
 	<composite:implementation>
 		<div class="row" style="width: 107%;">
 			<div class="col-xs-11 table-responsive">
-				<p:dataTable tableStyleClass="table table-bordered table-striped">
-					<p:column headerText="Nazwa asortymentu" />
-					<p:column headerText="PKWiU" />
-					<p:column headerText="J.m." />
-					<p:column headerText="Ilość" />
-					<p:column headerText="Cena" />
-					<p:column headerText="Watość" />
+				<p:dataTable tableStyleClass="table table-bordered table-striped"
+							 var="good" value="#{cc.attrs.controller.sourceObject.goodList}">
+					<p:column headerText="Nazwa asortymentu" style="width: 40%;">
+						<p:outputLabel value="#{good.good.name}"/>
+					</p:column>
+					<p:column headerText="PKWiU" style="width: 12%;">
+						<p:outputLabel value="#{good.good.pkwiu}" />
+					</p:column>
+					<p:column headerText="J.m." style="width: 12%;">
+						<p:outputLabel value="#{good.good.unit.name}" />
+					</p:column>
+					<p:column headerText="Ilość" style="width: 12%;">
+						<p:inputText value="#{good.quantity}" style="width: 100%; height: 25px;"/>
+					</p:column>
+					<p:column headerText="Cena" style="width: 12%;" >
+						<p:outputLabel value="#{good.good.priceMagGross}"/>
+					</p:column>
+					<p:column headerText="Watość" style="width: 12%;">
+						<p:outputLabel value="TODO" />
+					</p:column>
 				</p:dataTable>
 			</div>
 			<div class="col-xs-1">
@@ -43,29 +56,33 @@
 			<div class="col-xs-8">
 				<label>Adnotacje</label>
 				<p:inputTextarea styleClass="form-control"
-					value="#{cc.attrs.controller.sourceObject.deliverPerson}" />
+								 value="#{cc.attrs.controller.sourceObject.adnotation}" />
 			</div>
 
 			<div class="col-sm-4 pull-right">
 				<label>Razem</label>
-				<p:inputText styleClass="form-control" disabled="true"/>
+				<p:inputText styleClass="form-control" disabled="true"
+							 value="#{cc.attrs.controller.sourceObject.total}" />
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-xs-4">
 				<label>Wystawił</label>
-				<p:inputTextarea styleClass="form-control" />
+				<p:inputTextarea styleClass="form-control"
+								 value="#{cc.attrs.controller.sourceObject.issuePerson}" />
 			</div>
 
 			<div class="col-xs-4">
 				<label>Wydał</label>
-				<p:inputTextarea styleClass="form-control" />
+				<p:inputTextarea styleClass="form-control"
+								 value="#{cc.attrs.controller.sourceObject.deliverPerson}" />
 			</div>
 
 			<div class="col-xs-4">
 				<label>Odebrał</label>
-				<p:inputTextarea styleClass="form-control" />
+				<p:inputTextarea styleClass="form-control"
+								 value="#{cc.attrs.controller.sourceObject.receivePerson}" />
 			</div>
 		</div>
 	</composite:implementation>
