--- a/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/internalDocument.xhtml
@@ -1,10 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:composite="http://java.sun.com/jsf/composite"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
 	<composite:interface>
@@ -12,51 +10,11 @@
 	</composite:interface>
 
 	<composite:implementation>
-		<div class="row" style="width: 107%;">
-			<div class="col-xs-11 table-responsive">
-				<p:dataTable tableStyleClass="table table-bordered table-striped"
-							 var="good" value="#{cc.attrs.controller.sourceObject.goodList}">
-					<p:column headerText="Nazwa asortymentu" style="width: 40%;">
-						<p:outputLabel value="#{good.good.name}"/>
-					</p:column>
-					<p:column headerText="PKWiU" style="width: 12%;">
-						<p:outputLabel value="#{good.good.pkwiu}" />
-					</p:column>
-					<p:column headerText="J.m." style="width: 12%;">
-						<p:outputLabel value="#{good.good.unit.name}" />
-					</p:column>
-					<p:column headerText="Ilość" style="width: 12%;">
-						<p:inputText value="#{good.quantity}" style="width: 100%; height: 25px;"/>
-					</p:column>
-					<p:column headerText="Cena" style="width: 12%;" >
-						<p:outputLabel value="#{good.good.priceMagGross}"/>
-					</p:column>
-					<p:column headerText="Watość" style="width: 12%;">
-						<p:outputLabel value="TODO" />
-					</p:column>
-				</p:dataTable>
-			</div>
-			<div class="col-xs-1">
-				<div class="row" style="margin-bottom: 5px;">
-					<p:commandLink styleClass="btn btn-danger">
-						<i class="fa fa-minus" />
-					</p:commandLink>
-				</div>
-				<div class="row">
-					<p:commandLink styleClass="btn btn-success">
-						<i class="fa fa-plus" />
-					</p:commandLink>
-				</div>
-			</div>
-		</div>
-		
-		<p:spacer style="height: 10px" />
-		
 		<div class="row">
 			<div class="col-xs-8">
 				<label>Adnotacje</label>
 				<p:inputTextarea styleClass="form-control"
-								 value="#{cc.attrs.controller.sourceObject.adnotation}" />
+								 value="#{cc.attrs.controller.sourceObject.annotation}" />
 			</div>
 
 			<div class="col-sm-4 pull-right">
