Poprawienie problemu z dodawaniem dóbr.

--- a/project/project-core/src/main/webapp/resources/css/AdminLTE.css
+++ b/project/project-core/src/main/webapp/resources/css/AdminLTE.css
@@ -2802,3 +2802,9 @@ Component: timeline
 .pace-inactive {
   display: none;
 }
+
+.ui-panel .ui-panel-content {
+  border: 0;
+  background: none;
+  padding: 0em 0em !important;
+}
