--- a/project/project-core/src/main/webapp/resources/css/main.css
+++ b/project/project-core/src/main/webapp/resources/css/main.css
@@ -1,93 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 2014-03-21, 21:57:03
-    Author     : Łukasz Gadomski
-*/
 
-* {
-    margin: 0;
+.ui-panel .ui-panel-content {
     border: 0;
-    padding: 0;
-}
-
-body {
-    min-height : 2000px;    
-    color: #1A1A1A;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 14px;
-}
-
-#navigation {
-    position: fixed;
-    display: block;
-    float : top;
-    list-style: none outside none;
-    pointer-events: auto !important;
-    margin-top: -140px;
-    cursor: pointer;
-    z-index: 999999;
-}
-
-#navigation ul {
-    margin: 0;
-    padding: 0;
-}
-
-#navigation li {
-    color: #191919;
-    float: left;
-    height: 40px;
-    text-align: center;
-    margin-bottom: 5px;
-    width: 200px;
-}
-
-#navigation a, a:link, a:visited, a:active, a:hover {
-    text-decoration: none;
-}
-
-#navigation li a {
-    border-style:solid;
-    border-width:medium;
-    border-width:2px;
-    border-color: #1dba32;
-    background-color: #2ecb43;
-    background-position: 10px center;
-    background-repeat: no-repeat;
-    display: block;
-    height: 62px;
-    margin-right: 0;
-    text-align: center;
-    width: 200px;
-    height : 200px;
-}
-
-#navigation li img {
-    float: left;
-    height: 40px;
-    width: 40px;
-    padding: 10px 0 0 10px;
-    margin-top: 140px;
-}
-
-#navigation li span {
-    float: left;
-    color: #FFFFFF;
-    font-family: Cabin;
-    font-size: 25px;
-    line-height: 62px;
-    margin-top: 140px;
-    margin-left: 15px;
-}
-
-#menu-form {
-    float: right;
-}
-
-#content {
-    float: right;    
+    background: none;
+    padding: 0em 0em !important;
 }
