--- a/project/project-core/src/main/webapp/layout/main-template.xhtml
+++ b/project/project-core/src/main/webapp/layout/main-template.xhtml
@@ -24,6 +24,8 @@
         
         <link href="#{root}/resources/css/project-custom.css" rel="stylesheet" type="text/css" />
 
+        <link href="#{root}/resources/css/main.css" rel="stylesheet" type="text/css" />
+
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
