Podpięcie komponentów do paginacji i wyszukiwania. Poprawienie list dóbr i kontrahentów w komponentach wyboru a także wykorzystanie ich do modułów głównych Dóbr i Kontrahentów. Jeszcze sporo pracy.

--- a/project/project-core/src/main/webapp/resources/components/contractorChooser.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/contractorChooser.xhtml
@@ -13,8 +13,8 @@
 	</composite:interface>
 
 	<composite:implementation>
-		<cc:contractorList controller="#{cc.attrs.controller}" editable="#{cc.attrs.editable}" />
-		<div class="row" style="margin-top: 25px;">
+		<cc:contractorList controller="#{cc.attrs.controller}" editable="#{cc.attrs.editable}"/>
+		<div class="row">
 			<div class="col-xs-4 pull-right">
 				<p:commandLink styleClass="btn btn-primary pull-right" type="button"
 							   value="Wybierz" update="@form" action="#{cc.attrs.action}"/>
