--- a/project/project-core/src/main/webapp/resources/components/contractorList.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/contractorList.xhtml
@@ -3,7 +3,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:composite="http://java.sun.com/jsf/composite"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:cc="http://java.sun.com/jsf/composite/components">
 
 	<composite:interface>
 		<composite:attribute name="controller" />
@@ -12,50 +13,58 @@
 
 	<composite:implementation>
 		<div class="row">
-			<div class="col-xs-12 table-responsive">
-				<p:dataTable tableStyleClass="table table-bordered table-hover"
-							 var="contractor" value="#{cc.attrs.controller.items}"
-							 selectionMode="single" selection="#{cc.attrs.controller.singleSelection}" rowKey="#{contractor.id}"
-							 id="contractorTable">
+			<div class="col-xs-12">
+				<div class="box-header">
+					<cc:browser controller="#{cc.attrs.controller}" update="@form:#{cc.clientId}:table-form" />
+				</div>
+				<div class="box-body table-responsive">
+					<p:dataTable tableStyleClass="table table-bordered table-hover"
+						var="contractor" value="#{cc.attrs.controller.items}"
+						selectionMode="single" selection="#{cc.attrs.controller.singleSelection}"
+						rowKey="#{contractor.id}" id="table-form">
 
-					<p:ajax event="rowSelect" listener="#{cc.attrs.controller.onSelect(contractor)}" />
+						<p:ajax event="rowSelect" listener="#{cc.attrs.controller.onSelect(contractor)}" />
 
-					<p:column headerText="Symbol" sortBy="symbol">
-						<p:outputLabel value="#{contractor.symbol}" />
-					</p:column>
+						<p:column headerText="Symbol" sortBy="symbol">
+							<p:outputLabel value="#{contractor.symbol}" />
+						</p:column>
 
-					<p:column headerText="Nazwa" sortBy="name"  style="width: 300px">
-						<p:outputLabel value="#{contractor.name}" />
-					</p:column>
+						<p:column headerText="Nazwa" sortBy="name"  style="width: 300px">
+							<p:outputLabel value="#{contractor.name}" />
+						</p:column>
 
-					<p:column headerText="Grupa" sortBy="group.name">
-						<p:outputLabel value="#{contractor.group.name}"/>
-					</p:column>
+						<p:column headerText="Grupa" sortBy="group.name">
+							<p:outputLabel value="#{contractor.group.name}"/>
+						</p:column>
 
-					<p:column headerText="Miasto" sortBy="city">
-						<p:outputLabel value="#{contractor.city}" />
-					</p:column>
+						<p:column headerText="Miasto" sortBy="city">
+							<p:outputLabel value="#{contractor.city}" />
+						</p:column>
 
-					<p:column headerText="Adres" sortBy="adress">
-						<p:outputLabel value="#{contractor.adress}" />
-					</p:column>
+						<p:column headerText="Adres" sortBy="adress">
+							<p:outputLabel value="#{contractor.adress}" />
+						</p:column>
 
-					<p:column headerText="NIP" sortBy="nip">
-						<p:outputLabel value="#{contractor.nip}" />
-					</p:column>
+						<p:column headerText="NIP" sortBy="nip">
+							<p:outputLabel value="#{contractor.nip}" />
+						</p:column>
 
-					<p:column headerText="Akcja" style="width: 165px" rendered="#{cc.attrs.editable}">
-						<p:commandLink styleClass="btn btn-success btn-xs"
-									   action="#{cc.attrs.controller.edit(contractor.id)}">
-							<i class="glyphicon glyphicon-pencil"></i> Edytuj
-						</p:commandLink>
-						<p:spacer style="width: 10px" />
-						<p:commandLink styleClass="btn btn-danger btn-xs" update="contractorTable"
-									   action="#{cc.attrs.controller.remove(contractor)}">
-							<i class="glyphicon glyphicon-minus"></i> Usuń
-						</p:commandLink>
-					</p:column>
-				</p:dataTable>
+						<p:column headerText="Akcja" rendered="#{cc.attrs.editable}" style="width: 140px;">
+							<p:commandLink styleClass="btn btn-success btn-xs"
+										   action="#{cc.attrs.controller.edit(contractor.id)}">
+								<i class="glyphicon glyphicon-pencil"></i> Edytuj
+							</p:commandLink>
+							<p:spacer style="width: 10px" />
+							<p:commandLink styleClass="btn btn-danger btn-xs" update="table-form"
+										   action="#{cc.attrs.controller.remove(contractor)}">
+								<i class="glyphicon glyphicon-minus"></i> Usuń
+							</p:commandLink>
+						</p:column>
+					</p:dataTable>
+				</div>
+				<div class="box-footer clearfix">
+					<cc:pager controller="#{cc.attrs.controller}" update="@form:#{cc.clientId}:table-form" />
+				</div>
 			</div>
 		</div>
 	</composite:implementation>
