--- a/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/externalDocument.xhtml
@@ -6,7 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">>
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 	<composite:interface>
 		<composite:attribute name="controller"/>
