Poprawione kilka formatek po ostatnim commicie.

--- a/project/project-core/src/main/webapp/resources/components/contractorList.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/contractorList.xhtml
@@ -38,11 +38,11 @@
 						</p:column>
 
 						<p:column headerText="Miasto" sortBy="city">
-							<p:outputLabel value="#{contractor.city}" />
+							<p:outputLabel value="#{contractor.address.city}" />
 						</p:column>
 
 						<p:column headerText="Adres" sortBy="adress">
-							<p:outputLabel value="#{contractor.adress}" />
+							<p:outputLabel value="#{contractor.address.address}" />
 						</p:column>
 
 						<p:column headerText="NIP" sortBy="nip">
