--- a/project/project-core/src/main/webapp/resources/components/goodList.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/goodList.xhtml
@@ -50,7 +50,7 @@
 						</p:column>
 
 						<p:column headerText="Cena A Brutto" sortBy="priceAGross">
-							<p:outputLabel value="#{good.priceAGross}" >
+							<p:outputLabel value="#{good.prices.priceAGross}" >
 								<f:convertNumber type="number" groupingUsed="true" minFractionDigits="2" pattern="#0.00" />
 							</p:outputLabel>
 						</p:column>
