--- a/project/project-core/src/main/webapp/resources/components/invoiceGoodList.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/invoiceGoodList.xhtml
@@ -28,7 +28,7 @@
 						<p:outputLabel value="#{good.quantity}" />
 					</p:column>
 					<p:column headerText="Cena" style="width: 12%;" >
-						<p:outputLabel value="#{good.good.priceMagGross}"/>
+						<p:outputLabel value="#{good.good.prices.priceMagGross}"/>
 					</p:column>
 					<p:column headerText="Watość" style="width: 12%;">
 						<p:outputLabel value="TODO" />
